--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 image = "0.25.6"
 ndarray = "0.16.1"
 ort = "2.0.0-rc.4"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 walkdir = "2.5.0"
