--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 image = "0.25.6"
+imageproc = "0.25.0"
 ndarray = "0.16.1"
 ort = "2.0.0-rc.4"
 serde = { version = "1.0.219", features = ["derive"] }
