--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 image = "0.25.6"
 imageproc = "0.25.0"
 ndarray = "0.16.1"
+ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
+openblas-src = "0.10.11"
 ort = "2.0.0-rc.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
