--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 image = "0.25.6"
 imageproc = "0.25.0"
+itertools = "0.14.0"
 ndarray = "0.16.1"
 ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
 openblas-src = "0.10.11"
